# dockbarx-lxqt-plugin

./: .gitignore  CMakeLists.txt  README.md  config.h.in  configdialog.cpp  configdialog.h  dockbarx.desktop  lxqt-panel-plugin.py  lxqtplugin.cpp  lxqtplugin.h  lxqtpluginlibrary.h  panelsettings.cpp  panelsettings.h  panelsettingswatcher.cpp  panelsettingswatcher.h  pyappletkeeper.cpp  pyappletkeeper.h
src/: configdialog.cpp  configdialog.h  dbusproxy.cpp  dbusproxy.h  dockbarcontainer.cpp  dockbarcontainer.h  filewatcher.cpp  filewatcher.h  lxqt-panel-applet.py  lxqtpanel.cpp  lxqtpanel.h  lxqtplugin.cpp  lxqtplugin.h  lxqtpluginlibrary.cpp  lxqtpluginsettings.cpp  lxqtpluginsettings.h  panelsettings.cpp  panelsettings.h  panelsettingswatcher.cpp  pyappletkeeper.cpp  pyappletkeeper.h  themeparser.cpp  themeparser.h
